--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "lint": "tsc --noEmit"
   },
   "dependencies": {
-    "react-dom": "^19.2.4",
-    "recharts": "^3.7.0",
+    "@supabase/supabase-js": "^2.97.0",
+    "lucide-react": "^0.564.0",
     "react": "^19.2.4",
-    "lucide-react": "^0.564.0"
+    "react-dom": "^19.2.4",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
